--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "~0.1.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
